# XSV

./: .gitignore  .replit  agent.py  agent3333.py  agent777.py  agent_new.py  dummy_agent.py  final_automated_agent.py  main_travel_agent.py  o2.py  op-with-ml.py  optimal.py  optimized_agent.py  pyproject.toml  quick_extraction_test.py  replit.md  system_summary.py  test_europe_extraction.py  test_optimized_agent.py  test_user_emails.py
New folder/: SETUP_GUIDE.md  agent1111.py  agent2222.py  final_automated_agent.py  llm.py  o1.py  optimized_agent.py  replit.md
modules/: __init__.py  excel_generator.py  extractor_llm.py  llm_travel_agent.py  optimized_excel_generator.py  schema.py
modules2222/: language_detector.py
output/: 222multi.xlsx  222single.xlsx  MULTI_LEG.xlsx  SINGLE_LEG.xlsx  Travel_Inquiry_INQ_1750419407.xlsx  Travel_Inquiry_INQ_1750427968.xlsx  Travel_Inquiry_INQ_1750427987_5a0e12df_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750427987_658c6ad8_InquiryType.MODIFICATION.xlsx  Travel_Inquiry_INQ_1750427987_afe949b8_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_209f758b_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_2d64bc30_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_41e968dd_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_6d351ac1_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_b78f6693_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428073_bb3220e2_InquiryType.MULTI_LEG.xlsx  Travel_Inquiry_INQ_1750428074_54c148ec_InquiryType.MODIFICATION.xlsx  example.xlsx  multi.xlsx  single.xlsx  (+3 more)
(+48 files in other folders)
